objects/BL_FieldsMapping__mdt.object
<CustomObject>
    <label>BL FieldsMapping</label>
    <pluralLabel>BL FieldsMappings</pluralLabel>
    <fields>
        <fullName>UseCase__c</fullName>
        <label>Use Case</label>
        <referenceTo>BL_UseCase__mdt</referenceTo>
        <relationshipLabel>BL FieldsMappings (Use Case)</relationshipLabel>
        <relationshipName>BL_FieldsMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCurrency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_to_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save to SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFFieldPath__c</fullName>
        <label>SFFieldPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_InnerSelect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is InnerSelect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetPicklistLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Picklist Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wrapper_Field_Name__c</fullName>
        <label>Wrapper Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnerSelect_UseCase__c</fullName>
        <label>InnerSelect UseCase</label>
        <referenceTo>BL_UseCase__mdt</referenceTo>
        <relationshipLabel>BL FieldsMappings (InnerSelect UseCase)</relationshipLabel>
        <relationshipName>BL_FieldsMappingsInnerSelect</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Send_to_Clienteling_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Clienteling App</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>